--- a/src/pages/Loading/Loading.scss
+++ b/src/pages/Loading/Loading.scss
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Righteous);
 
 body {
-  background: #000;
+  background: #000 !important;
   scrollbar-width: none;
 }
 .loading svg {
@@ -14,7 +14,7 @@ body {
   text-transform: uppercase;
   animation: stroke 2s alternate;
   stroke-width: 2;
-  stroke: #365fa0;
+  stroke: #365fa0 !important;
   font-size: 140px;
   animation-fill-mode: forwards;
 }
@@ -23,7 +23,7 @@ body {
   font-size: 70px;
 }
 .loading .audio-icon {
-  background-color: white;
+  background-color: white !important;
   position: absolute;
   bottom: 5%;
   right: 5%;
