--- a/src/App.css
+++ b/src/App.css
@@ -370,6 +370,8 @@ section {
 .section-container {
   gap: 4rem;
   height: 80%;
+  display: flex;
+  align-items: center;
 }
 
 .section__pic-container {
@@ -382,9 +384,9 @@ section {
   border: var(--btn-color-2) 0.1rem solid;
   border-radius: 1rem;
   border-color: rgb(163, 163, 163);
-  height: auto;
-  padding: 0 1em;
+  padding: 0 1em; 
   margin: 0 auto;
+  height: 450px;
 }
 
 /* .timeline-container-about {
@@ -408,9 +410,10 @@ time {
   padding: 0;
   /* padding : 1rem; */
   width: 600px;
-  height: 500px;
   overflow-y: scroll;
+  height: auto;
   margin: auto;
+  height: 400px;
 }
 
 .timeline-container::-webkit-scrollbar {
@@ -438,7 +441,7 @@ time {
 
   max-width: 460px;
   border-radius: 12px;
-  
+  height: auto;
   background-color: var(--primary-bg-color);
   box-shadow: 0 4px 25px -20px rgba(0, 0, 0.2);
 }
