--- a/src/App.css
+++ b/src/App.css
@@ -942,7 +942,8 @@ footer p {
   }
 }
 
-#projects .card {
+#projects .card,
+#projects .util_card {
   background-color: var(--text-color);
   border-radius: 0.25rem;
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.55);
@@ -959,6 +960,30 @@ footer p {
   padding: 1rem;
   background: linear-gradient(to bottom left, #ef8d9c 40%, #ffc39e 100%);
   background: var(--text-color);
+}
+
+#projects .util_card {
+  width: 550px;
+}
+
+.quote {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#projects .utils_content {
+  padding: 1rem;
+  background: linear-gradient(to bottom left, #ef8d9c 40%, #ffc39e 100%);
+  background: var(--text-color);
+}
+
+#projects .utils_content {
+  height: 100% !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #projects .card_title {
@@ -979,11 +1004,31 @@ footer p {
   font-weight: 400;
   background-color: transparent !important;
 }
+
+.item-util {
+  height: 250px;
+}
+.quote .card_text {
+  color: var(--primary-bg-color) !important;
+  font-size: 1rem !important;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+  font-weight: 400;
+  background-color: transparent !important;
+}
 #projects .made_by {
   font-weight: 400;
   font-size: 13px;
   margin-top: 35px;
   text-align: center;
+}
+
+.utils-section {
+  height: 100% !important;
+  padding: 0 !important;
+}
+.utils-section .util_card {
+  box-shadow: none !important;
 }
 
 /*****************Testimonials*******************/
@@ -1109,4 +1154,46 @@ footer p {
     max-width: 25%;
     min-width: 25%;
   }
+}
+
+.music-card {
+  height: 100% !important;
+  display: flex;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+.utility {
+  flex: 0 1 calc(50% - 10px);
+  padding: 20px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100% !important;
+  background-color: var(--text-color) !important;
+}
+@media screen and (max-width: 768px) {
+  .utility {
+    flex-basis: calc(100% - 20px);
+  }
+}
+.buttonmusic {
+  color: var(--primary-bg-color); /* White button text color */
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 1.2em;
+  background-color: var(--text-color) !important
+}
+#music-controls, #music-control button, #music-controls i, #music-controls svg{
+  background-color: var(--text-color) !important;
+}
+#music-player h2, #music-player button, #music-player i, #music-player p{
+  color: var(--primary-bg-color);
 }
