--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ html::-webkit-scrollbar {
   --icon-color: black;
   --timeline-text: green;
   --timeline-dot: limegreen;
+  --helper-text: #cacaca;
 }
 
 .dark-theme {
@@ -53,11 +54,12 @@ html::-webkit-scrollbar {
   --icon-color: white;
   --timeline-text: gold;
   --timeline-dot: rgb(255, 222, 37);
+  --helper-text: #333333;
 }
 
 * {
   background-color: var(--primary-bg-color);
-  transition: all 0.5s linear;
+  transition: all 0.3s linear;
 }
 
 p {
@@ -1189,11 +1191,58 @@ footer p {
   cursor: pointer;
   transition: background-color 0.3s ease;
   font-size: 1.2em;
-  background-color: var(--text-color) !important
-}
-#music-controls, #music-control button, #music-controls i, #music-controls svg{
   background-color: var(--text-color) !important;
 }
-#music-player h2, #music-player button, #music-player i, #music-player p{
+#music-controls,
+#music-control button,
+#music-controls i,
+#music-controls svg {
+  background-color: var(--text-color) !important;
+}
+#music-player h2,
+#music-player button,
+#music-player i,
+#music-player p {
   color: var(--primary-bg-color);
+}
+
+/* password-gen */
+.password-input {
+  background-color: inherit;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.password-input input {
+  width: 25%;
+  padding: 2% 2%;
+  background-color: inherit;
+  border: 1px solid var(--primary-bg-color) !important;
+  color: var(--primary-bg-color);
+  text-align: center;
+  font-size: 1rem;
+}
+
+.password_helper {
+  color: var(--helper-text);
+  font-size: 1rem;
+}
+
+.password-result {
+  background-color: inherit;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.password-result p,
+.password-result i,
+.password-input svg {
+  background-color: var(--text-color);
+  color: var(--primary-bg-color);
+  margin: 0 0.5em;
 }
